<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="240dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/registration_number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:text="@string/registration_number_textview" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_registration_numbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/green"
            android:digits="абвгдеёжзийклмнопрстуфхцчшщъыьэюяАБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ0123456789"
            android:hint="@string/registration_number_edittextd"
            android:maxLines="1"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_warning_registration_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="15dp"
            android:textSize="13sp"
            android:textColor="@color/red_ff43"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/skip_registration_number"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@color/purple99"
                android:text="@string/alertdialog_skip"
                android:background="@drawable/sphera"/>

            <TextView
                android:id="@+id/bt_next_registration_number"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:padding="7dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/next"
                android:background="@drawable/sphera_next"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>